--- a/TrekStar/TrekStar.vcxproj
+++ b/TrekStar/TrekStar.vcxproj
@@ -1,4 +1,4 @@
-SHOULDNT BE ABLE TO SEE THIS
+SHOULDNT BE ABLE TO
 
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
